@@ -1,3 +1,4 @@
+6/17/14 #33 disable the 'Check' button in the game when all coefficients are zero
 6/17/14 #42 add missing entries in images/license.txt
 6/17/14 #22 remove unused strings from balancing-chemical-equations_en.strings
 # 1.0.0-dev.2 6/16/14
